--- a/explicacion_situacional/templates/caracterizacion.social.html
+++ b/explicacion_situacional/templates/caracterizacion.social.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" type="text/css" href="{% static "DataTables/extensions/Buttons/css/buttons.dataTables.min.css" %}">
   <link rel="stylesheet" type="text/css" href="{% static "DataTables/extensions/Select/css/select.dataTables.min.css" %}">
   <link rel="stylesheet" type="text/css" href="{% static "DataTables/extensions/Responsive/css/responsive.dataTables.min.css" %}">
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 {% endblock extracss %}
 {% block extrajs %}
   <script type="text/javascript" language="javascript" src="{% static "DataTables/media/js/jquery.dataTables.min.js" %}"></script>
@@ -15,8 +14,7 @@
   <script type="text/javascript" language="javascript" src="{% static "DataTables/extensions/Buttons/js/buttons.print.min.js" %}"></script>
   <script type="text/javascript" language="javascript" src="{% static "DataTables/extensions/Buttons/js/buttons.jqueryui.js" %}"></script>
   <script type="text/javascript" language="javascript" src="{% static "DataTables/extensions/Buttons/js/buttons.html5.min.js" %}"></script>
- <script src="{% static 'js/funciones.js' %}"></script>
-
+  <script src="{% static 'js/funciones.js' %}"></script>
 {% endblock extrajs %}
 {% block contenido_principal %}
     <div class="col-xs-12">
@@ -35,7 +33,6 @@
                           <th class="social0">Pregunta</th>
                           <th class="social1">Respuesta</th>
                           <th class="social2">Consulta</th>
-                          <th class="social3">Accion</th>
                       </tr>
                   </thead>
                   <tbody>
@@ -43,44 +40,36 @@
                         {% if respuesta.respuesta %}
                           <tr>
                               <td>{{ respuesta.pregunta }}</td>
-                              <td>Si</td>  
+                              <td onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')">Si</td>  
                               <td>{{ respuesta.pregunta.consulta.nombre_consulta | cut:" de mi comunidad" | cut:"Calidad del servicio de " | cut:"Calidad de servicios de " | cut:"Calidad de servicios " | cut:"Calidad de los servicios asociados a " | cut:"en " | cut:"relacionados a " | title}}</td>                        
-                              <td><a class="btn" onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')"><i class="glyphicon glyphicon-edit"></i></a></td>
                           </tr>
                         {% else %}
                           <tr>
                             <td> {{respuesta.pregunta}} </td>
                             {% for justificacion in abierta  %}
                               {% if justificacion.es_justificacion and justificacion.pregunta.pk == respuesta.pregunta.pk %}
-                                <td>No,{{justificacion.texto_respuesta}} </td>  
+                                <td onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')">No,{{justificacion.texto_respuesta}} </td>  
                               {% endif %}
                             {% endfor %}
                             <td>{{ respuesta.pregunta.consulta.nombre_consulta | cut:" de mi comunidad" | cut:"Calidad del servicio de " | cut:"Calidad de servicios de " | cut:"Calidad de servicios " | cut:"Calidad de los servicios asociados a " | cut:"en " | cut:"relacionados a " | title}}</td>
-                            <td><a class="btn" onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')" ><i class="glyphicon glyphicon-edit"></i></a></td>
                           </tr>
                         {% endif %} 
-                          
                       {% endfor %}
-
                       {% for respuesta in opciones %}
                       <tr>
                           <td>{{ respuesta.opcion.pregunta }}</td>
-                          <td>{{ respuesta.opcion }}</td>
+                          <td onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.opcion.pregunta.tipo_pregunta.pk respuesta.pk %}')">{{ respuesta.opcion }}</td>
                           <td>{{ respuesta.opcion.pregunta.consulta.nombre_consulta | cut:" de mi comunidad" | cut:"Calidad del servicio de " | cut:"Calidad de servicios de " | cut:"Calidad de servicios " | cut:"Calidad de los servicios asociados a " | cut:"en " | cut:"relacionados a " | title}}</td> 
-                          <td><a class="btn" onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.opcion.pregunta.tipo_pregunta.pk respuesta.pk %}')"><i class="glyphicon glyphicon-edit"></i></a></td>  
                       </tr>
                       {% endfor %}
                       {% for respuesta in abierta %}
-                      
                           {% if not respuesta.es_justificacion %}
                           <tr>
                             <td>{{ respuesta.pregunta }}</td>
-                            <td>{{ respuesta.texto_respuesta }}</td>
+                            <td onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')">{{ respuesta.texto_respuesta }}</td>
                             <td>{{ respuesta.pregunta.consulta.nombre_consulta | cut:" de mi comunidad" | cut:"Calidad del servicio de " | cut:"Calidad de servicios de " | cut:"Calidad de servicios " | cut:"Calidad de los servicios asociados a " | cut:"en " | cut:"relacionados a " | title}}</td> 
-                          <td><a class="btn" onclick="return abrir_modal('{% url 'explicacion:modificar_respuesta_' respuesta.pregunta.tipo_pregunta.pk respuesta.pk %}')"><i class="glyphicon glyphicon-edit"></i></a></td>
                           </tr>     
-                          {% endif %}
-                      
+                          {% endif %} 
                       {% endfor %}
                       {% for respuesta in ubicacion %}
                       <tr>
@@ -90,8 +79,7 @@
                           <td><a class="btn" href="#"><i class="icon"></i></a></td>         
                       </tr>
                       {% endfor %}
-                  </tbody>
-                 
+                  </tbody> 
               </table>
             {% endif %}
             <div id="popup" class="modal fade" role="dialog"></div>
@@ -102,7 +90,6 @@
                   <div class="small-box bg-red">
                     <div class="inner">
                       <h3 title="titulo-estado-agua">Estado del Servicio de Agua </h3>
-
                       <p align="justify">En este sub-módulo podrá registrar, consultar y modificar la situación de aguas blancas y aguas negras. </p>
                     </div>
                     <div class="icon">
@@ -120,7 +107,6 @@
                   <div class="small-box bg-red">
                     <div class="inner">
                       <h3 title="titulo-estado-electricidad">Estado del Servicio de Electricidad y Gas </h3>
-
                       <p align="justify">En este sub-módulo podrá registrar, consultar y modificar la situación de la electricidad y el gas. </p>
                     </div>
                     <div class="icon">
@@ -138,7 +124,6 @@
                   <div class="small-box bg-red">
                     <div class="inner">
                       <h3 title="titulo-estado-infraestructura">Estado de la Infraestructura Vial </h3>
-
                       <p align="justify">En este sub-módulo podrá registrar, consultar y modificar la situación de la vialidad. </p>
                     </div>
                     <div class="icon">
@@ -156,7 +141,6 @@
                   <div class="small-box bg-red">
                     <div class="inner">
                       <h3 title="titulo-estado-saneamiento">Estado de los Servicios Ambientales </h3>
-
                       <p align="justify">En este sub-módulo podrá registrar, consultar y modificar la situación ambiental. </p>
                     </div>
                     <div class="icon">
@@ -174,7 +158,6 @@
                   <div class="small-box bg-red">
                     <div class="inner">
                       <h3 title="titulo-estado-salud">Estado de los Servicios de Salud </h3>
-
                       <p align="justify">En este sub-módulo podrá registrar, consultar y modificar las situaciones de salud social. </p>
                     </div>
                     <div class="icon">
