--- a/explicacion_situacional/templates/modificar.respuesta.html
+++ b/explicacion_situacional/templates/modificar.respuesta.html
@@ -1,3 +1,14 @@
+{% block extracss %}
+{% load staticfiles %}
+<link type="text/css" rel="stylesheet" href="{% static 'jquery-entropizer-master/dist/css/jquery-entropizer.min.css' %}" />
+<link href="{% static 'bootstrap-3/css/bootstrap-toggle.min.css'%}" rel="stylesheet">
+{% endblock extracss %}
+{% block extrajs %}
+<script src="{% static 'bootstrap-3/js/bootstrap-toggle.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'jquery-entropizer-master/lib/entropizer.js' %}"></script>
+<script type="text/javascript" src="{% static 'jquery-entropizer-master/dist/js/jquery-entropizer.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'users/user_register.js' %}"></script>
+{% endblock extrajs %}
 <div class="modal-dialog modal-lg">
   <div class="modal-content">
       <form {% if tipo == '4' %} onsubmit="return validacion()"  {% endif %} role="form" action="{% url 'explicacion:modificar_respuesta_' tipo pk %}" method="post">
@@ -13,7 +24,6 @@
         {% csrf_token %}
         <div class="panel panel-default">
           <div class="panel-body" style="text-align: center;">
-
             <div class="row"><label>Respuesta</label></div>
             {{ formulario.respuesta}}
             {% if tipo == '4' %}
@@ -23,7 +33,6 @@
                 {{ formulario.justificacion.errors }}              
               {{ formulario.justificacion }}
               </div>
-              
             </div> 
             {% endif %}
           </div>
@@ -40,8 +49,6 @@
     </form>
   </div>
 </div>
-
-
 <script type="text/javascript">
   $(function(){
     var select = document.getElementById('id_respuesta');
@@ -60,8 +67,7 @@
         $('#div_justificacion').show(); 
       }
      });
-  });    
-
+  });
 function validacion() {
   var select = document.getElementById('id_respuesta');
   var justificacion = document.getElementById('id_justificacion');
